--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.31"
+    "astro": "^1.0.0-beta.36"
   },
   "dependencies": {
-    "@astrojs/rss": "^0.2.0"
+    "@astrojs/rss": "^0.2.0",
+    "rehype-katex": "^6.0.2",
+    "remark-math": "^5.1.1"
   }
 }
