--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -18,5 +18,5 @@ collections: # A list of collections the CMS should be able to edit
       - { label: 'Description', name: 'description', widget: 'text' }
       - { label: 'Draft', name: 'draft', widget: 'boolean' }
       - { label: 'Author', name: 'author', widget: 'string' }
-      - { label: 'Publish Date', name: 'pubDate', widget: 'datetime' }
+      - { label: 'Publish Date', name: 'pubDate', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
