--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.52"
+    "astro": "^1.0.0-beta.63"
   },
   "dependencies": {
+    "@astrojs/image": "^0.0.4",
     "@astrojs/rss": "^0.2.0",
     "rehype-katex": "^6.0.2",
     "remark-math": "^5.1.1"
