--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/ssr",
+  "name": "occident-tech-software",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,11 +9,9 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.73"
-  },
-  "dependencies": {
-    "@astrojs/image": "^0.1.3",
+    "@astrojs/image": "^0.2.0",
     "@astrojs/rss": "^0.2.2",
+    "astro": "^1.0.0-rc.1",
     "rehype-katex": "^6.0.2",
     "remark-math": "^5.1.1"
   }
