--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "remark-math": "^5.1.1"
   },
   "dependencies": {
-    "@astrojs/image": "^0.3.1",
-    "@astrojs/rss": "^0.2.2",
-    "astro": "^1.0.0-rc.6"
+    "@astrojs/image": "0.3.3",
+    "@astrojs/rss": "1.0.0",
+    "astro": "1.0.1"
   }
 }
