--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
+    "@astrojs/image": "^0.3.6",
+    "@astrojs/mdx": "^0.10.2",
+    "@astrojs/rss": "^1.0.0",
+    "astro": "^1.1.0",
     "rehype-katex": "^6.0.2",
     "remark-math": "^5.1.1"
-  },
-  "dependencies": {
-    "@astrojs/image": "0.3.3",
-    "@astrojs/rss": "1.0.0",
-    "astro": "1.0.7"
   }
 }
