--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -11,6 +11,7 @@ collections: # A list of collections the CMS should be able to edit
     folder: 'src/pages/posts' # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     extension: 'mdx'
+    format: 'frontmatter'
     sortable_fields: ['pubDate']
     fields: # The fields each document in this collection have
       - { label: "Layout", name: "layout", widget: "hidden", default: "../../layouts/blogPost.astro" }
