Uninstall @astrojs/image, updated mdx and astro

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     // Enable stricter transpilation for better output.
     "isolatedModules": true,
     // Add type definitions for our Vite runtime.
-    "types": ["vite/client"]
+    "types": ["astro/client"]
   }
 }
