--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "^0.11.4",
+    "@astrojs/preact": "^1.2.0",
     "@astrojs/rss": "^1.0.2",
     "astro": "^1.5.2",
+    "preact": "^10.11.2",
     "rehype-katex": "^6.0.2",
     "remark-math": "^5.1.1"
   }
