--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "devDependencies": {
     "@astrojs/mdx": "0.11.6",
-    "@astrojs/preact": "1.2.0",
     "@astrojs/rss": "1.0.3",
     "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/solid-js": "^1.2.2",
     "astro": "1.6.7",
-    "preact": "10.11.2",
     "rehype-katex": "6.0.2",
-    "remark-math": "5.1.1"
+    "remark-math": "5.1.1",
+    "solid-js": "^1.6.2"
   }
 }
