--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "@astrojs/mdx": "0.12.1",
     "@astrojs/rss": "1.1.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/solid-js": "^1.2.2",
     "astro": "1.6.14",
     "rehype-katex": "6.0.2",
     "remark-math": "5.1.1",
+    "sanitize-html": "^2.7.3",
     "solid-js": "^1.6.2"
   }
 }
