--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/solid-js": "^1.2.2",
     "@types/marked": "^4.0.8",
+    "@types/sanitize-html": "^2.6.2",
     "astro": "1.6.14",
     "marked": "^4.2.4",
     "rehype-katex": "6.0.2",
