--- a/package.json
+++ b/package.json
@@ -11,14 +11,12 @@
   "devDependencies": {
     "@astrojs/rss": "1.1.0",
     "@astrojs/sitemap": "^1.0.0",
-    "@astrojs/solid-js": "^1.2.2",
     "@types/marked": "^4.0.8",
     "@types/sanitize-html": "^2.6.2",
     "astro": "1.6.15",
     "marked": "^4.2.4",
     "rehype-katex": "6.0.2",
     "remark-math": "5.1.1",
-    "sanitize-html": "^2.7.3",
-    "solid-js": "^1.6.2"
+    "sanitize-html": "^2.7.3"
   }
 }
