--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "occident-tech-software",
   "version": "1.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -11,10 +12,12 @@
   "devDependencies": {
     "@astrojs/rss": "1.2.0",
     "@astrojs/sitemap": "^1.0.0",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@types/marked": "^4.0.8",
     "@types/sanitize-html": "^2.6.2",
     "astro": "1.6.15",
     "marked": "^4.2.4",
+    "postcss": "^8.4.20",
     "rehype-katex": "6.0.2",
     "remark-math": "5.1.1",
     "sanitize-html": "^2.7.3"
