--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/blog",
+  "name": "@cmiv/blog",
   "type": "module",
   "version": "0.0.1",
   "private": true,
@@ -11,8 +11,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.4",
-    "@astrojs/mdx": "^0.15.2",
+    "astro": "^2.0.5",
+    "@astrojs/mdx": "^0.16.0",
     "@astrojs/rss": "^2.1.0",
     "@astrojs/sitemap": "^1.0.1",
     "rehype-katex": "6.0.2",
