--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource-variable/inter": "^5.0.8",
-    "@tailwindcss/typography": "^0.5.9",
     "astro": "^2.10.1",
     "astro-icon": "^0.8.1",
     "astro-seo": "^0.7.5",
-    "sharp": "^0.32.4",
-    "tailwindcss": "^3.3.3"
+    "sharp": "^0.32.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "daisyui": "^3.5.1"
   }
 }
