--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/image": "^0.17.3",
     "@astrojs/mdx": "^0.19.7",
+    "@astrojs/rss": "^2.4.3",
     "@astrojs/sitemap": "^2.0.1",
     "@astrojs/tailwind": "^4.0.0",
     "@fontsource-variable/inter": "^5.0.8",
@@ -22,8 +23,8 @@
     "sharp": "^0.32.4"
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
     "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^3.5.1"
+    "daisyui": "^3.5.1",
+    "tailwindcss": "^3.3.3"
   }
 }
