--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.17.3",
     "@astrojs/mdx": "^1.0.0",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
@@ -19,8 +18,7 @@
     "@fontsource-variable/inter": "^5.0.8",
     "astro": "^3.0.1",
     "astro-icon": "^0.8.1",
-    "astro-seo": "^0.8.0",
-    "sharp": "^0.32.5"
+    "astro-seo": "^0.8.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
