--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "astrofy",
-  "description": "Astrofy is a free and open-source template for your Personal Portfolio Website built with Astro and TailwindCSS. Create in minutes a website with Blog, CV, Project Section, Store and RSS Feed.",
+  "name": "oceanus-group",
+  "description": "My website",
   "type": "module",
   "version": "2.5.1",
   "private": true,
   "scripts": {
     "dev": "astro dev",
-    "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^1.0.3",
     "@astrojs/rss": "^3.0.0",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "astro": "^3.0.12",
-    "daisyui": "^3.1.7",
-    "dayjs": "^1.11.9",
-    "sharp": "^0.32.5"
+    "astro": "^3.2.0",
+    "daisyui": "^3.8.1",
+    "dayjs": "^1.11.10",
+    "sharp": "^0.32.6",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10"
