--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "update": "pnpm dlx npm-check -u",
-    "start": "astro dev",
+    "pretty": "pnpm dlx prettier --write . --plugin=prettier-plugin-astro",
+    "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -22,6 +23,8 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.4.10",
+    "prettier": "^3.1.0",
+    "prettier-plugin-astro": "^0.12.2",
     "tailwindcss": "^3.3.5"
   }
 }
