--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/rss": "^3.0.0",
+    "@astrojs/rss": "4.0.0-beta.0",
     "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/tailwind": "6.0.0-beta.0",
     "@fontsource-variable/inter": "^5.0.15",
-    "astro": "^3.6.2",
+    "astro": "4.0.0-beta.1",
     "astro-icon": "^0.8.1",
-    "astro-seo": "^0.8.0"
+    "astro-seo": "^0.8.0",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
