--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/rss": "4.0.0-beta.0",
+    "@astrojs/rss": "3.0.0",
     "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "6.0.0-beta.0",
+    "@astrojs/tailwind": "5.0.2",
     "@fontsource-variable/inter": "^5.0.15",
-    "astro": "4.0.0-beta.2",
+    "astro": "3.6.4",
     "astro-icon": "^0.8.1",
     "astro-seo": "^0.8.0",
     "sharp": "^0.32.6"
