--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "update": "pnpm dlx npm-check -u",
     "pretty": "pnpm dlx prettier --write . --plugin=prettier-plugin-astro",
     "dev": "astro dev",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
@@ -22,10 +22,12 @@
     "sharp": "^0.33.0"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.3.1",
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.4.17",
     "prettier": "^3.1.0",
     "prettier-plugin-astro": "^0.12.2",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "typescript": "^5.3.2"
   }
 }
