--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/rss": "4.0.1",
+    "@astrojs/rss": "4.0.2",
     "@astrojs/sitemap": "^3.0.4",
     "@astrojs/tailwind": "5.1.0",
     "@fontsource-variable/inter": "^5.0.16",
-    "astro": "4.1.1",
-    "astro-icon": "^0.8.2",
+    "astro": "4.1.2",
+    "astro-icon": "=0.8.2",
     "astro-seo": "^0.8.0",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.3.4",
+    "@astrojs/check": "^0.4.1",
     "@tailwindcss/typography": "^0.5.10",
-    "daisyui": "^4.5.0",
+    "daisyui": "^4.6.0",
     "prettier": "^3.1.1",
     "prettier-plugin-astro": "^0.12.3",
     "tailwindcss": "^3.4.1",
